* #794: HTMLPurifier options missing after upgrade (skenow)
* #543: Block positions don't sort by title (skenow)
* #792: Old system waiting block not deleted (skenow)
* #795: removing clear text password from mail template (skenow)
* #769: Autotasks: crontab can't start but it displayed as avaible (mekdrop)
* #779: try add/remove autotasks for module when module has no autotasks items (mekdrop)
* #810: autotasks doesn't works when site is turned off

=== Impresscms 1.2 Beta ===
Release date: 5 Sep 2009
Revision: 9336

'''Added'''
* Added plugins/autotasks folder for storring autotasks systems (currently there is at.php, cron.php and internal.php handlers) (mekdrop)
* Added plugins/sourceeditors folder for Code Sources Editors (mekdrop)
* Added editarea source editor (mekdrop)
* Added autotasks preload (mekdrop)
* Added class/autotasks folder with base classes and interfaces for autotasks (iautotasksystem.php and icmsautotaskssystem.php) (mekdrop)
* Edited xoopseditor.inc.php and xoopseditor.php files in class folder. Added editor type support. For Example: if you specify source editor type, then source editor will be used. (mekdrop)
* Added modules/system/admin/autotasks - autotasks items administration (mekdrop)
* Added to modules/system/admin/preferences/main.php support for autotasksystem config field type (this form field show supported autotasks and installed system on current server)  (mekdrop)
* Added savingSystemAdminPreferencesItem preload event when saving system preferences items (params: array(conf_catid, conf_name, conf_value)  (mekdrop)
* Added afterSaveSystemAdminPreferencesItems preload event after saving config (param - array of old and new values) (mekdrop)
* Added define('_MD_AM_AUTOTASKS', 'Auto Tasks'); to modules/system/language/english/admin.php (mekdrop)
* Added define('XOOPS_SYSTEM_AUTOTASKS', 24); to modules/system/constants.php (mekdrop)
* Added some language constants to modules/system/language/english/admin/preferences.php (mekdrop)